--- a/Android/Kotlin-SimpleApp/psi-simpleapp-fixed/productscience.properties
+++ b/Android/Kotlin-SimpleApp/psi-simpleapp-fixed/productscience.properties
@@ -1,2 +1,2 @@
-productscience.github.config=<supplied by PSi>
-productscience.github.token=<supplied by PSi>
+productscience.config.tag=denis-dev-android:default
+productscience.token=t04_
