--- a/Android/Kotlin-SimpleApp/psi-simpleapp-fixed/build.gradle
+++ b/Android/Kotlin-SimpleApp/psi-simpleapp-fixed/build.gradle
@@ -4,19 +4,14 @@ buildscript {
         google()
         mavenCentral()
         maven {
-            url "https://maven.pkg.github.com/product-science/PSAndroid"
-            credentials {
-                username = github_user
-                password = github_key
-            }
+            url "https://artifactory.productscience.app/releases"
         }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
-        classpath "com.productscience.transformer:transformer-plugin:0.13.1"
-        classpath "com.productscience.transformer:transformer-instrumentation:0.13.1"
-
+        classpath "com.productscience.transformer:transformer-plugin:0.18.18"
+        classpath "com.productscience.transformer:transformer-instrumentation:0.18.18"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
